# my-tester

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-06.jsonl  2026-07-07.jsonl  2026-07-12.jsonl
src/mytester/: __init__.py  cli.py  coverage.py  green.py  health.py  red.py  tester.py
tests/: conftest.py  test_cli.py  test_coverage.py  test_green.py  test_health.py  test_red.py  test_tester.py
